modules/frontend_application/with_variable/sg.tf
resource "aws_security_group" "server" {
  name        = "${var.prefix}-server"
  description = "Allow ssh and http inbound traffic"
  vpc_id      = aws_vpc.main.id
  ingress {
    description = "SSH from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
   ingress {
    description = "HTTP from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  } 
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.prefix}-allow_ssh_http"

  }
}

resource "aws_security_group" "alb" {
    name        = "${var.prefix}-alb"
  description = "Allow http inbound traffic"
  vpc_id      = aws_vpc.main.id
  ingress {
    description = "HTTP from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  } 
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.prefix}-alb"

  }
}
